<?xml version="1.0" encoding="utf-8"?><!--
  ~ Look4Sat. Amateur radio and weather satellite tracker and passes predictor for Android.
  ~ Copyright (C) 2019, 2020 Arty Bishop (bishop.arty@gmail.com)
  ~
  ~ This program is free software; you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation; either version 2 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with this program; if not, write to the Free Software Foundation, Inc.,
  ~ 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  -->

<resources>
    <string name="app_name" translatable="false">Look4Sat</string>
    <string name="app_version">Version: %s</string>

    <string name="drawer_title" translatable="false">L∞k \n4Sat</string>
    <string name="drawer_lat_text">Latitude: </string>
    <string name="drawer_lon_text">Longitude: </string>

    <string name="update_loc">Update location</string>
    <string name="update_loc_success">Location updated</string>
    <string name="update_loc_failure">Check your Location settings</string>
    <string name="import_data_file">Import data from file</string>
    <string name="import_data_web">Import data from web</string>
    <string name="import_data_success">Satellite data was updated</string>
    <string name="import_data_failure">Satellite data import failed</string>
    <string name="goto_github">Link to GitHub</string>

    <string name="menu_pass_list">List of Passes</string>
    <string name="menu_polar_view" translatable="false">Polar View</string>
    <string name="menu_map_view">World Map View</string>
    <string name="menu_map_osm">World Map Demo</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About the App</string>
    <string name="menu_bottom_entries">Satellites</string>
    <string name="menu_bottom_passes">Passes</string>
    <string name="menu_bottom_osm">World Map</string>
    <string name="menu_bottom_settings">Settings</string>
    <string name="menu_bottom_about">About</string>

    <string name="dialog_select_sat">Select satellites to track</string>
    <string name="dialog_show_track">Show ground track for</string>
    <string name="dialog_filter_passes">Filter passes</string>
    <string name="dialog_tle_sources">Manage TLE sources</string>
    <string name="dialog_entries_hint">Name/CatNum</string>

    <string name="pref_hours_ahead_key" translatable="false">hoursAhead</string>
    <string name="pref_hours_ahead_hint">Hours ahead</string>
    <string name="pref_hours_ahead_summary">Show passes that occur within X hours</string>
    <string name="pref_hours_ahead_input_error">Set the value between 1h and 168h</string>
    <string name="pref_min_el_key" translatable="false">minEl</string>
    <string name="pref_min_el_hint">Minimum elevation</string>
    <string name="pref_min_el_summary">Show passes with max elevation above</string>
    <string name="pref_min_el_input_error">Set the value between 0° and 90°</string>

    <string name="pref_gsp_title">Ground station position</string>
    <string name="pref_lat_key" translatable="false">latitude</string>
    <string name="pref_lat_title">Latitude, deg</string>
    <string name="pref_lat_input_error">Set the value between -90° and 90°</string>
    <string name="pref_lon_key" translatable="false">longitude</string>
    <string name="pref_lon_title">Longitude, deg</string>
    <string name="pref_lon_input_error">Set the value between -180° and 180°</string>
    <string name="pref_alt_key" translatable="false">altitude</string>
    <string name="pref_alt_title">Altitude, m</string>
    <string name="pref_alt_input_error">Set the value between -413m and 8850m</string>
    <string name="pref_other_title">Other</string>
    <string name="pref_refresh_rate_key" translatable="false">rate</string>
    <string name="pref_refresh_rate_title">Refresh rate, ms</string>
    <string name="pref_refresh_rate_input_error">Set the value between 250ms and 10000ms</string>
    <string name="pref_compass_key" translatable="false">compass</string>
    <string name="pref_compass_title">Use sensors to rotate PolarView</string>

    <string name="pref_time_utc_key" translatable="false">timeUTC</string>
    <string name="pref_time_utc_title">Show pass time in UTC</string>

    <string name="no_mode">Mode: null</string>
    <string name="no_uplink">Uplink: null</string>
    <string name="no_downlink">Downlink: null</string>
    <string name="no_uplink_doppler">Curr. uplink: null</string>
    <string name="no_downlink_doppler">Curr. downlink: null</string>
    <string name="no_trans">No transceivers found for this satellite</string>

    <string name="err_no_permissions">Missing permissions</string>
    <string name="err_update_data">Please, update satellite data</string>
    <string name="err_enter_value">Please, enter the value</string>
    <string name="err_no_sat_selected">No satellites selected</string>

    <string name="pass_satName" translatable="false">%s</string>
    <string name="pass_satId" translatable="false">ID: %d</string>
    <string name="pass_aos_az">AOS — %2d°</string>
    <string name="pass_los_az">%2d° — LOS</string>
    <string name="pass_dateTime" translatable="false">dd MMM @ HH:mm:ss</string>

    <string name="pat_location" translatable="false">%.4f</string>
    <string name="pat_azimuth">Az: %.1f°</string>
    <string name="pat_elevation">El: %.1f°</string>
    <string name="pat_latitude">Lat: %.1f°</string>
    <string name="pat_longitude">Lon: %.1f°</string>
    <string name="pat_distance">Dst: %.0f km</string>
    <string name="pat_altitude">Alt: %.0f km</string>
    <string name="pat_timer" translatable="false">%02d:%02d:%02d</string>

    <string name="pat_osm_idName" translatable="false">%s / %s</string>
    <string name="pat_osm_latLon">Lat: %.1f°, Lon: %.1f°</string>
    <string name="pat_osm_vel">Vel: %.2f km/s</string>

    <string name="trans_description" translatable="false">%s</string>
    <string name="trans_mode">Mode: %s</string>
    <string name="trans_inverted">Inverted: %s</string>
    <string name="trans_up_low">Uplink: %.4fMHz</string>
    <string name="trans_up_lowHigh">Uplink: %.4f - %.4fMHz</string>
    <string name="trans_down_low">Downlink: %.4fMHz</string>
    <string name="trans_down_lowHigh">Downlink: %.4f - %.4fMHz</string>
    <string name="trans_up_low_doppler">Curr. uplink: %.4fMHz</string>
    <string name="trans_up_lowHigh_doppler">Curr. uplink: %.4f - %.4fMHz</string>
    <string name="trans_down_low_doppler">Curr. downlink: %.4fMHz</string>
    <string name="trans_down_lowHigh_doppler">Curr. downlink: %.4f - %.4fMHz</string>

    <string name="info_swipe_text">
        Swipe the screen to refresh the list of passes for selected satellites</string>
    <string name="info_main_text">
        Look4Sat is using the Two-Line Element set to calculate the satellites positions \n
        You can import the TLE data via the corresponding button in the main menu \n \n
        Once the list is calculated, press a pass item for detailed information</string>
    <string name="info_select_text">
        Press this button to select the satellites you wish to track</string>

    <string name="about_subtitle">
        Amateur radio and weather satellites passes calculator for Android</string>
    <string name="about_thanks_to">Big thanks:</string>
    <string name="about_thanks_list">— To you for installing and using this app! May your sky always be clear!\n

        \n— To David A. B. Johnson, <a href="https://github.com/g4dpz">G4DPZ</a>, the author of
        predict4java library which this app is using for all the SGP4 model calculations.\n

        \n— To <a href="https://github.com/davidmoten">Dave Moten</a> for creating the mavenized fork
        of predict4java which made it super easy to integrate the library in the app. Predict4java
        is available under the
        <a href="https://gnu.org/licenses/old-licenses/gpl-2.0.en.html">GNU GPLv2</a> license.\n

        \n— To Alexandru Csete, <a href="https://github.com/csete">OZ9AEC</a>, and contributors
        for the amazing Gpredict program that inspired the creation and design of Look4Sat.\n

        \n— To <a href="https://celestrak.com/webmaster.php">Dr T.S. Kelso</a> for his invaluable
        contribution to the industry and his <a href="https://celestrak.com/">Celestrak</a>
        website, that stores, updates and provides access to TLE data.\n

        \n— To the <a href="https://libre.space/">Libre Space Foundation</a> team and their SatNOGS
        project that provides an extremely easy to use <a href="https://db.satnogs.org/api/">API</a>
        and <a href="https://db.satnogs.org/">DB</a> with a huge amount of information about
        satellites, their telemetry and transmitters, which the app uses under the hood.\n

        \n— To Guys from Square for creating an amazing set of libraries (OkHttp, Okio, Retrofit)
        and for making them available under the
        <a href="https://www.apache.org/licenses/LICENSE-2.0">Apache-2.0</a> license.\n

        \n— To Guys from Google and AOSP for making the best mobile OS available nowadays, for their
        Google Play Services, Gson and Dagger2 libs.\n

        \nThis application comes with absolutely no warranty. See the
        <a href="https://gnu.org/licenses/old-licenses/gpl-2.0.en.html">GNU GPLv2</a> for details.
    </string>

    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_all_none">All/None</string>

    <string name="map_gsp">GSP</string>
    <string name="tle_source">TLE source</string>
    <string name="https_only">Please use HTTPS URLs only</string>
    <string name="placeholder" translatable="false">Placeholder</string>
    <string name="osmCopyright" translatable="false">Wikimedia maps | Map data © OpenStreetMap contributors</string>
    <string name="sat_import">Import satellite data</string>
</resources>
