<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_gsp_title">
        <EditTextPreference
            android:defaultValue="0.0"
            android:key="@string/pref_lat_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_lat_title" />
        <EditTextPreference
            android:defaultValue="0.0"
            android:key="@string/pref_lon_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_lon_title" />
        <EditTextPreference
            android:defaultValue="0.0"
            android:key="@string/pref_alt_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_alt_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_other_title">
        <EditTextPreference
            android:defaultValue="3000"
            android:key="@string/pref_refresh_rate_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/pref_refresh_rate_summary"
            android:title="@string/pref_refresh_rate_title" />
    </PreferenceCategory>
</PreferenceScreen>