<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pass_list"
            android:icon="@drawable/ic_sat_asc_right"
            android:title="@string/menu_pass_list" />
        <item
            android:id="@+id/nav_map_view"
            android:icon="@drawable/ic_world_map"
            android:title="@string/menu_map_view" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_credits"
            android:icon="@drawable/ic_credits"
            android:title="@string/menu_credits" />
    </group>
</menu>
