<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/surfaceBg">

    <TextView
        android:id="@+id/pass_pref_title"
        style="@style/DialogText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/dialog_filter_passes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hours_ahead_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="@string/pref_hours_ahead_summary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_pref_title" />

    <EditText
        android:id="@+id/hours_ahead_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/pref_hours_ahead_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/hours_ahead_text"
        app:layout_constraintStart_toStartOf="@+id/hours_ahead_text"
        app:layout_constraintTop_toBottomOf="@+id/hours_ahead_text" />

    <TextView
        android:id="@+id/min_elev_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pref_min_el_summary"
        app:layout_constraintEnd_toEndOf="@+id/hours_ahead_edit"
        app:layout_constraintStart_toStartOf="@+id/hours_ahead_edit"
        app:layout_constraintTop_toBottomOf="@+id/hours_ahead_edit" />

    <EditText
        android:id="@+id/min_elev_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/pref_min_el_hint"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/min_elev_text"
        app:layout_constraintStart_toStartOf="@+id/min_elev_text"
        app:layout_constraintTop_toBottomOf="@+id/min_elev_text" />

    <Button
        android:id="@+id/pass_pref_btn_neg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/surfaceToolbar"
        android:text="@string/btn_cancel"
        android:textAllCaps="false"
        android:textColor="@color/themeAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pass_pref_btn_pos"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/min_elev_edit" />

    <Button
        android:id="@+id/pass_pref_btn_pos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/surfaceToolbar"
        android:text="@string/btn_update"
        android:textAllCaps="false"
        android:textColor="@color/themeAccent"
        app:layout_constraintBaseline_toBaselineOf="@+id/pass_pref_btn_neg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pass_pref_btn_neg" />

</androidx.constraintlayout.widget.ConstraintLayout>
