<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pass_geo_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/greyCard"
    app:cardCornerRadius="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pass_geo_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:selectableItemBackground">

        <TextView
            android:id="@+id/pass_geo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="4dp"
            android:text="@string/pass_satName"
            android:textColor="@color/themeLight"
            app:layout_constraintEnd_toStartOf="@+id/pass_geo_id"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pass_geo_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:text="@string/pass_satId"
            android:textColor="@color/themeLight"
            app:layout_constraintBaseline_toBaselineOf="@+id/pass_geo_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pass_geo_name" />

        <TextView
            android:id="@+id/pass_geo_az"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="4dp"
            android:text="@string/pat_azimuth"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/pass_geo_el"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/pass_geo_name"
            app:layout_constraintTop_toBottomOf="@+id/pass_geo_name" />

        <TextView
            android:id="@+id/pass_geo_alt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pat_altitude"
            app:layout_constraintBaseline_toBaselineOf="@+id/pass_geo_az"
            app:layout_constraintEnd_toEndOf="@+id/pass_geo_el"
            app:layout_constraintStart_toStartOf="@+id/pass_geo_az" />

        <TextView
            android:id="@+id/pass_geo_el"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pat_elevation"
            app:layout_constraintBaseline_toBaselineOf="@+id/pass_geo_az"
            app:layout_constraintEnd_toEndOf="@+id/pass_geo_id"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/pass_geo_az" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
