<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_sat_entry_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/dialog_select_sat"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/dialog_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dialog_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/dialog_btn_negative"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_search" />

    <TextView
        android:id="@+id/dialog_btn_neutral"
        style="@style/SatEntryDialogText"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/btn_all_none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dialog_btn_negative"
        style="@style/SatEntryDialogText"
        android:layout_marginEnd="24dp"
        android:text="@string/btn_cancel"
        app:layout_constraintBaseline_toBaselineOf="@+id/dialog_btn_positive"
        app:layout_constraintEnd_toStartOf="@+id/dialog_btn_positive" />

    <TextView
        android:id="@+id/dialog_btn_positive"
        style="@style/SatEntryDialogText"
        android:layout_width="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:gravity="end"
        android:text="@string/btn_ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>